# liquidbiopsy_agent

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  multimodal_feature_her2_demo.yaml  multimodal_her2_demo.yaml
ref/region_sets/: cpg_islands.bed  promoters_demo.bed
scripts/: demo_methylgpt_encoder.py  encode_bed_to_embedding.py  encode_blood_signal_features.py  encode_wsi_to_slide_embedding.py  move_gse243474_by_cancer_type.py  run_cfdna_plot_suite.py  run_pipeline.py  train_feature_contrastive.py  train_multimodal.py  visualize_cfdna.py
src/liquidbiopsy_agent/: __init__.py  cfdna_visualization.py  cli.py  config.py  logging.py
src/liquidbiopsy_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/liquidbiopsy_agent/agent/: cache.py  dag.py  decisions.py  llm.py  state.py  task.py
src/liquidbiopsy_agent/multimodal/: __init__.py  bed_embedding.py  blood_signal_encoding.py  config.py  data.py  dna_foundation_encoders.py  extractors.py  feature_contrastive.py  losses.py  methylgpt_encoder.py  model.py  train.py  wsi_encoding.py
src/liquidbiopsy_agent/pipeline/: pipeline.py
src/liquidbiopsy_agent/pipeline/nodes/: __init__.py  agent_review.py  cnv.py  cohort.py  frag.py  ingest.py  manifest.py  merge.py  meth_proxy.py  qc.py  report.py  schema.py
src/liquidbiopsy_agent/utils/: device.py  hashing.py  io.py  plotting.py  storage.py
src/liquidbiopsy_agent/visualization/: __init__.py  cfdna_plot_suite.py
templates/: report.html.j2
