[project]
name = "liquidbiopsy-agent"
version = "0.1.0"
description = "Agentised cfDNA BED-based analysis pipeline"
authors = [{name = "Codex"}]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "pyarrow>=14",
    "numpy>=1.26",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "tenacity>=8.2",
    "langgraph>=0.0.40",
    "pyranges>=0.0.129"
]

[project.optional-dependencies]
report = ["weasyprint>=59"]
ml = ["scikit-learn>=1.3"]
local-llm = ["llama-cpp-python>=0.2.0"]
llm-openai = ["openai>=1.0"]
tools = ["openpyxl>=3.1"]
multimodal = [
    "torch>=2.2",
    "torchvision>=0.17",
    "pillow>=10.0",
    "transformers>=4.38",
    "pyfaidx>=0.8",
    "enformer-pytorch>=0.8"
]
wsi = [
    "openslide-python>=1.3",
    "h5py>=3.10",
    "opencv-python>=4.10",
    "scikit-image>=0.22",
    "geopandas>=1.0",
    "shapely>=2.0",
    "huggingface_hub>=0.23",
    "timm==0.9.16",
    "einops-exts>=0.0.4",
    "segmentation-models-pytorch>=0.5.0",
    "aicsimageio>=4.14.0",
    "pyvips>=3.0.0",
    "gdown>=5.2.0"
]

[project.scripts]
liquidbiopsy-agent = "liquidbiopsy_agent.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
